# human-captcha

./: .gitignore  README.md  attack.py  captcha.js  generate_demo_gif.py  index.html  pyproject.toml  server.py
captcha/: __init__.py  generator.py  optimized_core.py
